--- a/video.html
+++ b/video.html
@@ -8,8 +8,12 @@
 }
 
 *{
+  /* background-image: url('https://cdn.pixabay.com/photo/2016/12/16/15/25/christmas-1911637_960_720.jpg'); */
   font-family: 'Nunito', sans-serif;
-  margin: 10px;; padding: 5px;
+  border-style: initial;
+  border-radius: 12px;
+  
+  margin: 25px;; padding: 5px;
   box-sizing: border-box;
   outline: none; border:none;
   text-decoration: none;
@@ -30,7 +34,8 @@ html{
 }
 
 body{
-  background:#f7f7f7;
+  background-image: url("https://cdn.pixabay.com/photo/2016/12/16/15/25/christmas-1911637_960_720.jpg");
+  
 }
 
 section{
@@ -38,10 +43,16 @@ section{
 }
 
 .heading{
+ 
+  
   text-align: center;
-  font-size: 3.5rem;
-  padding:1rem;
-  color:var(--red);
+  font-size: 5rem;
+  text-decoration: solid;
+  padding:4rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color:rgb(255, 255, 255);
+  margin: 28px;
+  
 }
 
 .heading span{
